# opencv-flow-executor

./: README.md  build.sh
opencv-backend/: pyproject.toml
opencv-backend/src/opencv_backend/: main.py
opencv-backend/src/opencv_backend/api/: __init__.py  image_api.py
opencv-backend/src/opencv_backend/enum/: __init__.py  step.py
opencv-backend/src/opencv_backend/model/: __init__.py  process_flow.py  workflow.py
opencv-backend/src/opencv_backend/service/: __init__.py  image_process_service.py
opencv-backend/src/opencv_backend/static/: index.html
opencv-backend/src/opencv_backend/static/assets/: index-1w_8Z8rR.js  index-DIWqbAw8.js
opencv-backend/src/opencv_backend/utils/: __init__.py  utils.py
workflow-ui/: index.html  package-lock.json  package.json
workflow-ui/src/components/: App.tsx
workflow-ui/src/components/workflow/: Editor.tsx  SidePanel.tsx  WorkflowEditor.tsx
workflow-ui/src/components/workflow/constant/: Constant.tsx
workflow-ui/src/components/workflow/nodes/: BaseNode.tsx  BlurNode.tsx  DeNoiseNode.tsx  DilateNode.tsx  ErodeNode.tsx  FilterNode.tsx  GrayScaleNode.tsx  ImageNode.tsx  InvertNode.tsx  ResizeNode.tsx  RotateNode.tsx  SharpenNode.tsx  ThresholdNode.tsx
