[project]
name = "opencv-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Prince Solomon",email = "prince7036@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "opencv-python-headless (>=4.11.0.86,<5.0.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "numpy (>=2.3.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "opencv_backend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
